...
              minimumSize: const Size(double.infinity, 50),
              side: BorderSide(color: theme.colorScheme.primary, width: 2),
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(11),
              ),
            ),
            child: const Text('IMPORT FROM TEXT'),
          ),
          const SizedBox(height: 20),
          const Divider(),
          const SizedBox(height: 20),
          IODialogButton(
            onPressed: importFromZipFile,
...
            title: const Text('Cards Data'),
            value: includeCards,
            onChanged: (val) => setState(() => includeCards = val ?? true),
            activeColor: theme.colorScheme.primary,
          ),
          CheckboxListTile(
            title: const Text('Settings'),
            value: includeSettings,
            onChanged: (val) => setState(() => includeSettings = val ?? true),
            activeColor: theme.colorScheme.primary,
          ),
          CheckboxListTile(
            title: const Text('Pictures'),
...
          const SizedBox(height: 20),
          _sectionTitle(theme, 'Export to:'),
          const SizedBox(height: 10),
          IODialogButton(
            onPressed: exportToClipboard,
            icon: const Icon(Icons.copy),
            label: 'CLIPBOARD',
            aboutText: 'Export cards as plain text into your clipboard',
          ),
          const SizedBox(height: 10),
          IODialogButton(
            onPressed: exportToFile,
            icon: const Icon(Icons.file_copy),
...
