...
                      ),
                    );
                  }
                },
                style: OutlinedButton.styleFrom(elevation: 0.0, side: BorderSide(color: Theme.of(context).colorScheme.primary, width: 2.0), shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(11))),
                child: Text(
                  'DELETE',
                  style: Theme.of(context).textTheme.bodyLarge?.copyWith(
                    fontWeight: FontWeight.bold,
                    fontSize: 15,
                  ),
                ),
              ),
...
                        });
                      }
                    },
                  ),
                ],
                title: Text(
                    'Cardabase',
                    style: Theme.of(context).textTheme.titleLarge?.copyWith()
                ),
                centerTitle: true,
                elevation: 0.0,
                backgroundColor: Theme.of(context).colorScheme.surface,
                floating: true,
...
