...
            ],
          );

    return Scaffold(
      appBar: AppBar(
        title: Text(
          'Welcome',
          style: theme.textTheme.titleLarge?.copyWith(
            color: theme.colorScheme.tertiary,
          ),
        ),
        centerTitle: true,
        elevation: 0.0,
...
                            topLeft: Radius.circular(15),
                            topRight: Radius.circular(15),
                          ),
                        ),
                      ),
                      child: Text(
                        'Continue',
                        style: theme.textTheme.bodyLarge?.copyWith(
                          fontSize: 22,
                          color: theme.colorScheme.primary,
                        ),
                      ),
                    ),
...
