...
                      color: theme.colorScheme.secondary,
                    ),
                    onPressed: navigateToSettingsScreen,
                  ),
                ],
                title: Text(
                  'Cardabase',
                  style: theme.textTheme.titleLarge?.copyWith(),
                ),
                centerTitle: true,
                elevation: 0.0,
                backgroundColor: theme.colorScheme.surface,
                floating: true,
...
